[package]
name = "filter_dp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rv = {version = "0.16.5", features = ["serde1", "datum"]}
toml = "0.8.11"
rand = "0.8.5"
rand_seeder = "0.2.3"
